--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
-        animation: animate 1s 5s forwards;
+        animation: animate 1s 4600ms forwards;
       }
 
       @keyframes animate {
@@ -78,26 +78,13 @@
         }
       }
 
-      .preloader lottie-player {
-        width: 30%;
+      .preloader #lottie {
+        width: 30% !important;
       }
     </style>
   </head>
   <body>
-    <div id="root">
-      <div class="preloader">
-        <lottie-player
-          src="/preloader.json"
-          background="transparent"
-          style="overflow: clip !important"
-          speed="1"
-          autoplay=""
-          class="preloader-lottie"
-        >
-        </lottie-player>
-      </div>
-    </div>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
